# OzarkRiver

./: README.md
FlightComputerFirmware/: ArmGccCortexM4HF.cmake  CMakeLists.txt  README.md
FlightComputerFirmware/Cmsis/: CMakeLists.txt
FlightComputerFirmware/FreeRTOS/: CMakeLists.txt
FlightComputerFirmware/HalF3/: CMakeLists.txt
FlightComputerFirmware/HalF4/: CMakeLists.txt
FlightComputerFirmware/HalF4/Inc/: stm32f4xx_hal_cec.h  stm32f4xx_hal_fmpi2c.h  stm32f4xx_hal_fmpi2c_ex.h  stm32f4xx_hal_fmpsmbus.h  stm32f4xx_hal_fmpsmbus_ex.h  stm32f4xx_hal_hash.h  stm32f4xx_hal_lptim.h  stm32f4xx_hal_smartcard.h  stm32f4xx_ll_dac.h  stm32f4xx_ll_fmpi2c.h  stm32f4xx_ll_lptim.h  stm32f4xx_ll_tim.h  stm32f4xx_ll_usart.h
FlightComputerFirmware/HalF4/Src/: stm32f4xx_hal_cec.c  stm32f4xx_hal_fmpi2c.c  stm32f4xx_hal_fmpi2c_ex.c  stm32f4xx_hal_fmpsmbus.c  stm32f4xx_hal_fmpsmbus_ex.c  stm32f4xx_hal_iwdg.c  stm32f4xx_hal_lptim.c  stm32f4xx_hal_mmc.c  stm32f4xx_hal_sd.c  stm32f4xx_hal_smartcard.c  stm32f4xx_hal_smbus.c  stm32f4xx_hal_usart.c  stm32f4xx_ll_lptim.c  stm32f4xx_ll_tim.c  stm32f4xx_ll_usart.c
FlightComputerFirmware/Platform/: CMakeLists.txt  FreeRTOSConfig.h  STM32_192K_1K_FLASH.ld  STM32_40K_256K_FLASH.ld  startup_stm32f303xc.c  startup_stm32f405.c  stm32f3xx_hal_conf.h  stm32f4xx_hal_conf.h  system_stm32f4xx.c
FlightComputerFirmware/Src/: Analog.c  Analog.h  Ascii.c  Ascii.h  BigEndian.c  BigEndian.h  Bits.c  Bits.h  Crsf.c  Crsf.h  FlightControl.c  FlightControl.h  Fs.c  Fs.h  GeoTools.c  GeoTools.h  GeoTypes.h  Gps1.c  Gps1.h  HardwareNotes.txt  Hmc5983.c  Hmc5983.h  I2c1.c  I2c1.h  ImuAhrs.c  ImuAhrs.h  Leds.c  Leds.h  LittleEndian.c  LittleEndian.h  Log.h  MathX.c  MathX.h  Mpu6000.c  Mpu6000.h  Mpu6050.c  Mpu6050.h  Nmea0183.c  Nmea0183.h  Pid.c  (+33 more)
FlightComputerFirmware/Src/Drivers/FatFs/: ff.c  ffconf.h
FlightComputerFirmware/Src/Drivers/SpiSd/: SpiSd.c  SpiSd.h  SpiSdDiskIo.c  SpiSdDiskIo.h  diskio.c  diskio.h  ff_gen_drv.c  ff_gen_drv.h  integer.h
FlightComputerFirmware/Src/FatFs/: diskio.c  diskio.h
FlightComputerFirmware/Src/Usb/: usbd_cdc.c  usbd_cdc.h  usbd_cdc_if.c  usbd_cdc_if.h  usbd_conf.c  usbd_conf.h  usbd_core.c  usbd_desc.c  usbd_desc.h
FlightComputerFirmware/Src/i2cdevlib/HMC5883/: HMC5883L.h
FlightComputerFirmware/Src/i2cdevlib/I2Cdev/: I2Cdev.c  I2Cdev.h
FlightComputerFirmware/Src/i2cdevlib/MPU6050/: MPU6050.c  MPU6050.h
